# invert

./: .gitignore  .zenodo.json  ARTIFACT.md  ARTIFACTS.md  CITATION.cff  EXTERNAL_CLASS_E_FEASIBILITY.md  EXTERNAL_EFFIBENCH_FEASIBILITY.md  EXTERNAL_VALIDATION_CLOSURE.md  EXTERNAL_VARIABILITY_DETECTOR_PROTOCOL.md  EXTERNAL_VARIABILITY_FEASIBILITY.md  EXTERNAL_VARIABILITY_PILOT_REPORT.md  EXTERNAL_VARIABILITY_PROTOCOL.md  LICENSE  MANIFEST_ZENODO.txt  README.md  REPRODUCIBILITY.md  ZENODO_AUDIT.md  external_class_e_go_no_go.json  external_class_e_smoke_results.csv  external_effibench_candidate_tasks.csv  external_effibench_go_no_go.json  external_variability_analysis_plan.md  external_variability_dataset_options.csv  external_variability_detector_design.md  external_variability_detector_sha256.txt  external_variability_go_no_go.json  external_variability_pilot_go_no_go.json  external_variability_pilot_results.csv  external_variability_pilot_summary.csv  external_variability_results_schema.csv  external_variability_smoke_results.csv  manuscript_section_external_variability_draft.tex  pyproject.toml  requirements.txt  updated_threats_for_external_variability_draft.tex
configs/: core_v2_euler_rk4_pilot.yaml  external_variability_protocol.yaml  models.yaml
invert_discovery/: __init__.py
results/: identifiability_matrix.csv  recovery.csv
scripts/: run_core_v2_eager_lazy_pilot_local_001.sh  run_core_v2_euler_rk4_pilot_001.sh  run_core_v2_euler_rk4_pilot_local_001.sh  run_core_v2_euler_rk4_pilot_local_sweep_001.sh  run_core_v2_generalization_local_bfs_dfs_001.sh  (+13 more)
(+2998 files in other folders)
